--- a/DMSDriver/DMSDriver/Resources/Storyboards/Login.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Login.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3T1-w1-Qsx">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3T1-w1-Qsx">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -38,7 +38,7 @@
                                     <action selector="didClickLogin:" destination="3T1-w1-Qsx" eventType="touchUpInside" id="u79-Yh-8ep"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_app" translatesAutoresizingMaskIntoConstraints="NO" id="c15-3W-M3X">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DMS-Logo_S" translatesAutoresizingMaskIntoConstraints="NO" id="c15-3W-M3X">
                                 <rect key="frame" x="112.5" y="61" width="150" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="4yo-kZ-oWF"/>
@@ -199,8 +199,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="DMS-Logo_S" width="260" height="130"/>
         <image name="check_selected" width="24" height="24"/>
-        <image name="ic_app" width="370" height="189"/>
         <image name="ic_login_password" width="18" height="18"/>
         <image name="ic_login_user" width="18" height="18"/>
     </resources>
