[OrderDetail] Apply api update status an order

--- a/DMSDriver/DMSDriver/Resources/Storyboards/Order.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Order.storyboard
@@ -518,9 +518,9 @@
                         <viewLayoutGuide key="safeArea" id="3sD-7l-Phb"/>
                     </view>
                     <connections>
-                        <outlet property="btnUnable" destination="zhZ-I6-6Kf" id="npq-nk-EJy"/>
+                        <outlet property="btnUnable" destination="zhZ-I6-6Kf" id="OlE-WT-nkx"/>
                         <outlet property="tableView" destination="Cbz-Qu-Ei1" id="wAy-Xh-kmW"/>
-                        <outlet property="updateStatusButton" destination="fbg-gT-bC4" id="pQ1-5r-xV9"/>
+                        <outlet property="updateStatusButton" destination="fbg-gT-bC4" id="XnM-HE-vN4"/>
                         <outlet property="vAction" destination="Q5p-kQ-q1m" id="T3e-j1-EyR"/>
                     </connections>
                 </viewController>
